動作確認した

--- a/3rd_Seisaku_alarm/platformio.ini
+++ b/3rd_Seisaku_alarm/platformio.ini
@@ -4,4 +4,6 @@ board = esp32dev ; WROVERでも基本はesp32devで動作します
 framework = arduino
 monitor_speed = 115200
 lib_deps =
-    dfrobot/DFRobotDFPlayerMini
+    https://github.com/avishorp/TM1637.git
+    arduino-libraries/NTPClient @ ^3.2.1
+    dfrobot/DFRobotDFPlayerMini @ ^1.0.6
